--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
       </article>
     </section>
     <section class="topic">
-      <h2 class="topic-title first-topic">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
+      <h2 class="topic-title main-title-of-topic">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
       </h2>
       <h3 class="topic-subtitle subtitle-decor">5 простых (на самом деле не очень) советов</h3>
       <article class="topic-card topic-focus">
-        <h3 class="card-title subtitle-decor">Представьте небо и облака</h3>
+        <h4 class="card-title subtitle-decor">Представьте небо и облака</h4>
         <p class="card-text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто
           именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно
           закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было —
@@ -105,13 +105,13 @@
           настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
       </article>
       <article class="topic-card topic-focus">
-        <h3 class="card-title subtitle-decor">Включите музыку</h3>
+        <h4 class="card-title subtitle-decor">Включите музыку</h4>
         <p class="card-text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями,
           которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать
           включить плейлист с «белым шумом» или нейромузыкой.</p>
       </article>
       <article class="topic-card topic-focus">
-        <h3 class="card-title subtitle-decor">Прогуляйтесь</h3>
+        <h4 class="card-title subtitle-decor">Прогуляйтесь</h4>
         <p class="card-text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент 
           <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank" class="text-link">показал</a>, что созерцание
           природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается.
@@ -119,13 +119,13 @@
           будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
       </article>
       <article class="topic-card topic-focus">
-        <h3 class="card-title subtitle-decor">Хорошо ешьте</h3>
+        <h4 class="card-title subtitle-decor">Хорошо ешьте</h3>
         <p class="card-text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким
           скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица,
           фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
       </article>
       <article class="topic-card topic-focus">
-        <h3 class="card-title subtitle-decor">Читайте</h3>
+        <h4 class="card-title subtitle-decor">Читайте</h4>
         <p class="card-text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в
           соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько
           часов и круто тренирует направленное внимание.</p>
