--- a/index.html
+++ b/index.html
@@ -53,10 +53,13 @@
         <h3 class="card-title subtitle-decor">Многозадачность</h3>
         <p class="card-text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная
           многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её
-          просто не существует. Исследователи 
-          <a class="text-link" target="_blank" href="https://www.dana.org/article/multicosts-of-multitasking/">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах
+          просто не существует. Исследователи
+          <a class="text-link" target="_blank"
+            href="https://www.dana.org/article/multicosts-of-multitasking/">выяснили</a>, что мозгу тяжело
+          концентрироваться даже на двух делах
           одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и
-          адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
+          адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
+        </p>
       </article>
       <article class="topic-card">
         <h3 class="card-title subtitle-decor">Дофамин</h3>
@@ -69,31 +72,39 @@
     </section>
     <section class="topic accent-topic">
       <h2 class="topic-title">Что снижает концентрацию внимания?</h2>
-      <article class="topic-card">
-        <h3 class="card-title subtitle-decor">Многозадачность</h3>
-        <p class="card-text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко
-          меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности.
-          Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она
-          может не выдержать, если не давать ей отдохнуть.</p>
-      </article>
-      <article class="topic-card">
-        <h3 class="card-title subtitle-decor">Еда</h3>
-        <p class="card-text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и
-          помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на
-          «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и
-          сонливость. И хотим ещё больше быстрых углеводов.</p>
-      </article>
-      <article class="topic-card">
-        <h3 class="card-title subtitle-decor">Гаджеты</h3>
-        <p class="card-text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на
-          компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на
-          другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20
-          минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы
-          вернуться к работе.</p>
-      </article>
+      <div class="accent-section">
+        <article class="topic-card">
+          <h3 class="card-title subtitle-decor">Многозадачность</h3>
+          <p class="card-text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко
+            меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности.
+            Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и
+            она
+            может не выдержать, если не давать ей отдохнуть.</p>
+        </article>
+        <article class="topic-card">
+          <h3 class="card-title subtitle-decor">Еда</h3>
+          <p class="card-text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию
+            и
+            помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем
+            на
+            «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и
+            сонливость. И хотим ещё больше быстрых углеводов.</p>
+        </article>
+        <article class="topic-card">
+          <h3 class="card-title subtitle-decor">Гаджеты</h3>
+          <p class="card-text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на
+            компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи
+            на
+            другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20
+            минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно,
+            чтобы
+            вернуться к работе.</p>
+        </article>       
+      </div>
     </section>
     <section class="topic">
-      <h2 class="topic-title main-title-of-topic">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
+      <h2 class="topic-title main-title-of-topic">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+        секунд)
       </h2>
       <h3 class="topic-subtitle subtitle-decor">5 простых (на самом деле не очень) советов</h3>
       <article class="topic-card topic-focus">
@@ -112,11 +123,13 @@
       </article>
       <article class="topic-card topic-focus">
         <h4 class="card-title subtitle-decor">Прогуляйтесь</h4>
-        <p class="card-text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент 
-          <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank" class="text-link">показал</a>, что созерцание
+        <p class="card-text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+          <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank"
+            class="text-link">показал</a>, что созерцание
           природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается.
           Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он
-          будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
+          будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+        </p>
       </article>
       <article class="topic-card topic-focus">
         <h4 class="card-title subtitle-decor">Хорошо ешьте</h4>
@@ -138,7 +151,6 @@
       <img class="art tape-image" src="./images/tape.png" alt="Кассета" loading="lazy">
       <img class="art books-image" src="./images/books.png" alt="Стопка книг" loading="lazy">
       <img class="art street-image" src="./images/street.png" alt="Улица" loading="lazy">
-
     </section>
   </main>
   <footer class="footer decorated-zone">
